# NeuroLabUploadBlackfynn

upload-bfynn/: ChangeLog  HOWTO_SETUP  Makefile.am  README  ReadmeFirst.txt  ReadmeSecond.txt  TEMPLATE-for-SPARC-list-of-files-to-upload.csv  configure.ac  upload_bfynn.py
upload-bfynn/debian/: README  README.Debian  README.source  changelog  control  copyright  rules  sparc.doc-base.EX
upload-bfynn/upload_blackfynn/files/: Readme  info1.txt  info2.txt  info3.txt  info4.txt  info5.txt  sess2.rec
upload-bfynn/upload_blackfynn/working/: TEMPLATE-for-SPARC-list-of-files-to-upload.xlsx  WindowsInstall.txt  upload_bfyn_win.lnk  upload_bfynn_win.pyw  uploadblackfynn.lnk  win_upload_test-local.xlsx  win_upload_test.xlsx  win_upload_verbose_test.xlsx
